--- a/finalproject-react/package.json
+++ b/finalproject-react/package.json
@@ -16,6 +16,7 @@
     "react-router-redux": "5.0.0-alpha.6",
     "react-scripts": "1.1.4",
     "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "2.2.0",
     "save": "^2.3.2",
     "webpack": "2.5.1",
