json files and gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 finalproject-core/appsettings\.Development\.json
 
 finalproject-core/appsettings\.json
+
+finalproject-core/
+
+finalproject-react/
