--- a/finalproject-react/package.json
+++ b/finalproject-react/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.0.0",
     "history": "^4.7.2",
+    "npm": "^5.8.0",
     "prop-types": "^15.6.1",
     "react": "^16.3.1",
     "react-axios": "^2.0.0",
