--- a/finalproject-react/package.json
+++ b/finalproject-react/package.json
@@ -18,7 +18,7 @@
     "react-scripts": "1.1.4",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "2.2.0",
+    "redux-thunk": "^2.2.0",
     "save": "^2.3.2",
     "webpack": "2.5.1",
     "webpack-cli": "^2.0.13",
@@ -30,5 +30,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "redux-devtools-extension": "^2.13.2"
   }
 }
