--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,4 @@ finalproject-core/appsettings\.Development\.json
 
 finalproject-core/appsettings\.json
 
-finalproject-core/
-
-finalproject-react/
+finalproject-react/node_modules/
